--- a/.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-s3/action.yml
+++ b/.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-s3/action.yml
@@ -50,6 +50,7 @@ runs:
     - name: fetch S3 secrets from Kubernetes secrets
       run: |-
         kubectl get secret s3-openedx-storage -n $NAMESPACE  -o json | jq  '.data | map_values(@base64d)' | jq -r 'keys[] as $k | "TUTOR_\($k|ascii_upcase)=\(.[$k])"' >> $GITHUB_ENV
+      shell: bash
 
     - name: Enable plugin for S3
       run: |-
@@ -63,3 +64,4 @@ runs:
                           --set S3_STORAGE_BUCKET="$S3_STORAGE_BUCKET" \
                           --set S3_CUSTOM_DOMAIN="$S3_CUSTOM_DOMAIN" \
                           --set S3_REGION="$S3_REGION"
+      shell: bash
