--- a/.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-xqueue/action.yml
+++ b/.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-xqueue/action.yml
@@ -37,9 +37,11 @@ runs:
     - name: fetch MySQL configuration from Kubernetes secrets
       run: |-
         kubectl get secret mysql-xqueue -n $NAMESPACE  -o json | jq  '.data | map_values(@base64d)' | jq -r 'keys[] as $k | "TUTOR_\($k|ascii_upcase)=\(.[$k])"' >> $GITHUB_ENV
+      shell: bash
 
     - name: Enable the Xqueue plugin
       run: |-
         pip install tutor-xqueue
         tutor plugins enable xqueue
         tutor config save
+      shell: bash
