--- a/.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-discovery/action.yml
+++ b/.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-discovery/action.yml
@@ -33,9 +33,11 @@ runs:
     - name: fetch MySQL configuration from Kubernetes secrets
       run: |-
         kubectl get secret mysql-discovery -n $NAMESPACE  -o json | jq  '.data | map_values(@base64d)' | jq -r 'keys[] as $k | "TUTOR_\($k|ascii_upcase)=\(.[$k])"' >> $GITHUB_ENV
+      shell: bash
 
     - name: Enable the Discovery plugin
       run: |-
         pip install tutor-discovery
         tutor plugins enable discovery
         tutor config save
+      shell: bash
