--- a/.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-discovery/action.yml
+++ b/.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-discovery/action.yml
@@ -12,6 +12,11 @@ description:
 branding:
   icon: 'cloud'
   color: 'orange'
+inputs:
+  namespace:
+    description: 'The Kubernetes namesapce to which the Open edX platform environment will be deployed. Example: openedx-prod'
+    required: true
+    type: string
 runs:
   using: "composite"
   steps:
@@ -32,7 +37,7 @@ runs:
     # see: https://github.com/Medality-Health/openedx_devops/blob/main/terraform/modules/mysql/main.tf
     - name: fetch MySQL configuration from Kubernetes secrets
       run: |-
-        kubectl get secret mysql-discovery -n $NAMESPACE  -o json | jq  '.data | map_values(@base64d)' | jq -r 'keys[] as $k | "TUTOR_\($k|ascii_upcase)=\(.[$k])"' >> $GITHUB_ENV
+        kubectl get secret mysql-discovery -n ${{ inputs.namespace }}  -o json | jq  '.data | map_values(@base64d)' | jq -r 'keys[] as $k | "TUTOR_\($k|ascii_upcase)=\(.[$k])"' >> $GITHUB_ENV
       shell: bash
 
     - name: Enable the Discovery plugin
