--- a/.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-s3/action.yml
+++ b/.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-s3/action.yml
@@ -12,6 +12,11 @@ description:
 branding:
   icon: 'cloud'
   color: 'orange'
+inputs:
+  namespace:
+    description: 'The Kubernetes namesapce to which the Open edX platform environment will be deployed. Example: openedx-prod'
+    required: true
+    type: string
 runs:
   using: "composite"
   steps:
@@ -49,7 +54,7 @@ runs:
     #
     - name: fetch S3 secrets from Kubernetes secrets
       run: |-
-        kubectl get secret s3-openedx-storage -n $NAMESPACE  -o json | jq  '.data | map_values(@base64d)' | jq -r 'keys[] as $k | "TUTOR_\($k|ascii_upcase)=\(.[$k])"' >> $GITHUB_ENV
+        kubectl get secret s3-openedx-storage -n {{ inputs.namespace }}  -o json | jq  '.data | map_values(@base64d)' | jq -r 'keys[] as $k | "TUTOR_\($k|ascii_upcase)=\(.[$k])"' >> $GITHUB_ENV
       shell: bash
 
     - name: Enable plugin for S3
