--- a/.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-credentials/action.yml
+++ b/.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-credentials/action.yml
@@ -48,7 +48,7 @@ runs:
     # see: https://github.com/Medality-Health/openedx_devops/blob/main/terraform/modules/mysql/main.tf
     - name: fetch MySQL configuration from Kubernetes secrets
       run: |-
-        kubectl get secret mysql-credentials -n $NAMESPACE  -o json | jq  '.data | map_values(@base64d)' | jq -r 'keys[] as $k | "TUTOR_\($k|ascii_upcase)=\(.[$k])"' >> $GITHUB_ENV
+        kubectl get secret mysql-credentials -n ${{ inputs.namespace }}  -o json | jq  '.data | map_values(@base64d)' | jq -r 'keys[] as $k | "TUTOR_\($k|ascii_upcase)=\(.[$k])"' >> $GITHUB_ENV
       shell: bash
 
     # IMPORTANT: you must run tutor_build_credentials first.
