--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,6 +46,9 @@ jobs:
           namespace: openedx-prod
 
       - uses: ./.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-backup
+        with:
+          aws-ecr-uri: 621672204142.dkr.ecr.us-east-2.amazonaws.com/openedx_backup:latest
+
       - uses: ./.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-discovery
         with:
           namespace: openedx-prod
