--- a/.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-backup/action.yml
+++ b/.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-backup/action.yml
@@ -17,6 +17,10 @@ inputs:
     description: 'The URI for the AWS ECR repository. Example: 621672204142.dkr.ecr.us-east-2.amazonaws.com/openedx_backup:latest'
     required: true
     type: string
+  namespace:
+    description: 'The Kubernetes namesapce to which the Open edX platform environment will be deployed. Example: openedx-prod'
+    required: true
+    type: string
 runs:
   using: "composite"
   steps:
