--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,16 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    env:
+      ENABLE_S3: true
+      ENABLE_BACKUP: true
+      ENABLE_DISCOVERY: true
+      ENABLE_MFE: true
+      ENABLE_CREDENTIALS: true
+      ENABLE_XQUEUE: true
+      ENABLE_NOTES: true
+      ENABLE_ECOMMERCE: true
+      ENABLE_FORUM: true
     steps:
       - name: Checkout
         uses: actions/checkout@v3.0.2
@@ -41,37 +51,58 @@ jobs:
           echo "aws cli version:"
           aws --version
 
-      - uses: ./.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-s3
+      - name: Enable tutor plugin - S3
+        uses: ./.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-s3
+        if: ${{ env.ENABLE_S3 == true }}
         with:
           namespace: openedx-prod
 
-      - uses: ./.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-backup
+      - name: Enable tutor plugin - Backup
+        uses: ./.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-backup
+        if: ${{ env.ENABLE_BACKUP == true }}
         with:
           aws-ecr-uri: 621672204142.dkr.ecr.us-east-2.amazonaws.com/openedx_backup:latest
           namespace: openedx-prod
 
-      - uses: ./.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-discovery
+      - name: Enable tutor plugin - Discovery
+        uses: ./.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-discovery
+        if: ${{ env.ENABLE_DISCOVERY == true }}
         with:
           namespace: openedx-prod
 
-      - uses: ./.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-mfe
-      - uses: ./.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-credentials
+      - name: Enable tutor plugin - MFE
+        uses: ./.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-mfe
+        if: ${{ env.ENABLE_MFE == true }}
+        with:
+          aws-ecr-uri: 621672204142.dkr.ecr.us-east-2.amazonaws.com/openedx_mfe:latest
+
+      - name: Enable tutor plugin - Credentials
+        uses: ./.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-credentials
+        if: ${{ env.ENABLE_CREDENTIALS == true }}
         with:
           namespace: openedx-prod
 
-      - uses: ./.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-xqueue
+      - name: Enable tutor plugin - Xqueue
+        uses: ./.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-xqueue
+        if: ${{ env.ENABLE_XQUEUE == true }}
         with:
           namespace: openedx-prod
 
-      - uses: ./.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-notes
+      - name: Enable tutor plugin - Notes
+        uses: ./.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-notes
+        if: ${{ env.ENABLE_NOTES == true }}
         with:
           namespace: openedx-prod
 
-      - uses: ./.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-ecommerce
+      - name: Enable tutor plugin - Ecommerce
+        uses: ./.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-ecommerce
+        if: ${{ env.ENABLE_ECOMMERCE == true }}
         with:
           namespace: openedx-prod
 
-      - uses: ./.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-forum
+      - name: Enable tutor plugin - Forum
+        uses: ./.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-forum
+        if: ${{ env.ENABLE_FORUM == true }}
 
       - name: test whether we can dump the tutor config to the console
         run: |-
