--- a/.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-mfe/action.yml
+++ b/.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-mfe/action.yml
@@ -13,22 +13,13 @@ branding:
   icon: 'cloud'
   color: 'orange'
 inputs:
-  environment-id:
-    description: 'The Open edX platform environment. Examples: prod, qa, dev'
+  aws-ecr-uri:
+    description: 'The URI for the AWS ECR repository. Example: 621672204142.dkr.ecr.us-east-2.amazonaws.com/openedx_mfe:latest'
     required: true
     type: string
-  namespace:
-    description: 'The Kubernetes namesapce to which the Open edX platform environment will be deployed. Example: openedx-prod'
-    required: true
-    type: string
-  openedx-common-version:
-    description: 'The named release of Open edX platform to deploy. Example: open-release/maple.3'
-    required: true
-    type: string
+
 runs:
   using: "composite"
-  env:
-    DOCKER_IMAGE_MFE: 621672204142.dkr.ecr.us-east-2.amazonaws.com/openedx_mfe:latest
   steps:
     - name: Checkout
       uses: actions/checkout@v3.0.2
@@ -37,6 +28,6 @@ runs:
       run: |-
         pip install tutor-mfe
         tutor plugins enable mfe
-        tutor config save --set MFE_DOCKER_IMAGE=${DOCKER_IMAGE_MFE} \
+        tutor config save --set MFE_DOCKER_IMAGE=${{ inputs.aws-ecr-uri }} \
                           --set MFE_ENABLE_HTTPS=true
       shell: bash
