--- a/.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-credentials/action.yml
+++ b/.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-credentials/action.yml
@@ -13,23 +13,20 @@ branding:
   icon: 'cloud'
   color: 'orange'
 inputs:
-  environment-id:
-    description: 'The Open edX platform environment. Examples: prod, qa, dev'
-    required: true
-    type: string
   namespace:
     description: 'The Kubernetes namesapce to which the Open edX platform environment will be deployed. Example: openedx-prod'
     required: true
     type: string
-  openedx-common-version:
-    description: 'The named release of Open edX platform to deploy. Example: open-release/maple.3'
+  aws-ecr-uri:
+    description: 'The URI for the AWS ECR repository. Example: 621672204142.dkr.ecr.us-east-2.amazonaws.com/openedx_credentials:latest'
+    required: true
+    type: string
+  common-logo-url:
+    description: 'Example: https://www.edx.org/images/logos/edx-logo-elm.svg'
     required: true
     type: string
 runs:
   using: "composite"
-  env:
-    COMMON_LOGO_URL: https://www.edx.org/images/logos/edx-logo-elm.svg
-    DOCKER_IMAGE_CREDENTIALS: 621672204142.dkr.ecr.us-east-2.amazonaws.com/openedx_credentials:latest
   steps:
     - name: Checkout
       uses: actions/checkout@v3.0.2
@@ -56,7 +53,7 @@ runs:
       run: |-
         pip install git+https://github.com/lpm0073/tutor-contrib-credentials@v13.0.2
         tutor plugins enable credentials
-        tutor config save --set CREDENTIALS_DOCKER_IMAGE=${DOCKER_IMAGE_CREDENTIALS} \
+        tutor config save --set CREDENTIALS_DOCKER_IMAGE=${{ inputs.aws-ecr-uri }} \
                           --set CREDENTIALS_HOST="credentials.${LMS_HOSTNAME}" \
                           --set CREDENTIALS_LMS_HOST=${LMS_HOSTNAME} \
                           --set CREDENTIALS_LMS_URL_ROOT=${LMS_HOSTNAME} \
@@ -66,11 +63,11 @@ runs:
                           --set CREDENTIALS_SECRET_KEY="${TUTOR_OPENEDX_SECRET_KEY}" \
                           --set CREDENTIALS_SITE_NAME="Your School" \
                           --set CREDENTIALS_TOS_URL="${LMS_HOSTNAME}/tos" \
-                          --set CREDENTIALS_LOGO_URL="${COMMON_LOGO_URL}" \
-                          --set CREDENTIALS_LOGO_URL_PNG="${COMMON_LOGO_URL}" \
+                          --set CREDENTIALS_LOGO_URL="${{ inputs.common-logo-url }}" \
+                          --set CREDENTIALS_LOGO_URL_PNG="${{ inputs.common-logo-url }}" \
                           --set CREDENTIALS_LOGO_URL_SVG="" \
-                          --set CREDENTIALS_LOGO_WHITE_URL="${COMMON_LOGO_URL}" \
-                          --set CREDENTIALS_LOGO_WHITE_URL_PNG="${COMMON_LOGO_URL}" \
+                          --set CREDENTIALS_LOGO_WHITE_URL="${{ inputs.common-logo-url }}" \
+                          --set CREDENTIALS_LOGO_WHITE_URL_PNG="${{ inputs.common-logo-url }}" \
                           --set CREDENTIALS_LOGO_WHITE_URL_SVG="" \
-                          --set CREDENTIALS_FAVICON_URL="${COMMON_LOGO_URL}" \
+                          --set CREDENTIALS_FAVICON_URL="${{ inputs.common-logo-url }}" \
       shell: bash
