--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,32 +52,32 @@ jobs:
           aws --version
 
       - name: Enable tutor plugin - S3
-        uses: ./.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-s3
+        uses: openedx-actions/tutor-enable-plugin-s3
         if: ${{ env.ENABLE_S3 == 'true' }}
         with:
           namespace: openedx-prod
 
       - name: Enable tutor plugin - Backup
-        uses: ./.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-backup
+        uses: openedx-actions/tutor-enable-plugin-backup
         if: ${{ env.ENABLE_BACKUP == 'true' }}
         with:
           aws-ecr-uri: 621672204142.dkr.ecr.us-east-2.amazonaws.com/openedx_backup:latest
           namespace: openedx-prod
 
       - name: Enable tutor plugin - Discovery
-        uses: ./.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-discovery
+        uses: openedx-actions/tutor-enable-plugin-discovery
         if: ${{ env.ENABLE_DISCOVERY == 'true' }}
         with:
           namespace: openedx-prod
 
       - name: Enable tutor plugin - MFE
-        uses: ./.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-mfe
+        uses: openedx-actions/tutor-enable-plugin-mfe
         if: ${{ env.ENABLE_MFE == 'true' }}
         with:
           aws-ecr-uri: 621672204142.dkr.ecr.us-east-2.amazonaws.com/openedx_mfe:latest
 
       - name: Enable tutor plugin - Credentials
-        uses: ./.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-credentials
+        uses: openedx-actions/tutor-enable-plugin-credentials
         if: ${{ env.ENABLE_CREDENTIALS == 'true' }}
         with:
           namespace: openedx-prod
@@ -85,25 +85,25 @@ jobs:
           common-logo-url: https://www.edx.org/images/logos/edx-logo-elm.svg
 
       - name: Enable tutor plugin - Xqueue
-        uses: ./.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-xqueue
+        uses: openedx-actions/tutor-enable-plugin-xqueue
         if: ${{ env.ENABLE_XQUEUE == 'true' }}
         with:
           namespace: openedx-prod
 
       - name: Enable tutor plugin - Notes
-        uses: ./.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-notes
+        uses: openedx-actions/tutor-enable-plugin-notes
         if: ${{ env.ENABLE_NOTES == 'true' }}
         with:
           namespace: openedx-prod
 
       - name: Enable tutor plugin - Ecommerce
-        uses: ./.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-ecommerce
+        uses: openedx-actions/tutor-enable-plugin-ecommerce
         if: ${{ env.ENABLE_ECOMMERCE == 'true' }}
         with:
           namespace: openedx-prod
 
       - name: Enable tutor plugin - Forum
-        uses: ./.github/workflows/tutor/deploy/plugins/tutor-enable-plugin-forum
+        uses: openedx-actions/tutor-enable-plugin-forum
         if: ${{ env.ENABLE_FORUM == 'true' }}
 
       - name: test whether we can dump the tutor config to the console
