--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -14,14 +14,131 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    env:
+      ENVIRONMENT_ID: prod
+      NAMESPACE: openedx-prod
+      AWS_ACCOUNT_NUMBER: '123456789012'
+      AWS_ECR_HOST: 'dkr.ecr.us-east-2.amazonaws.com'
+      ENABLE_S3: true
+      ENABLE_BACKUP: true
+      ENABLE_DISCOVERY: true
+      ENABLE_MFE: true
+      ENABLE_CREDENTIALS: true
+      ENABLE_XQUEUE: true
+      ENABLE_NOTES: true
+      ENABLE_ECOMMERCE: true
+      ENABLE_FORUM: true
+
     steps:
-      - name: Deploy prod
-        uses: ./.github/workflows/tutor/deploy/tutor_deploy
+      - name: Checkout
+        uses: actions/checkout@v3.0.2
+
+      # ---------------------------------------------------------------------------------
+      # initialize workflow environment variables
+      # ---------------------------------------------------------------------------------
+      - name: Intialize AWS_ECR_URI
+        shell: bash
+        run: |-
+          echo "AWS_ECR_URI=${{ env.AWS_ACCOUNT_NUMBER }}.${{ env.AWS_ECR_HOST }}" >> $GITHUB_ENV
+
+      - name: Intialize AWS ECR repo URIs
+        shell: bash
+        run: |-
+          echo "AWS_ECR_REPOSITORY_BACKUP=${AWS_ECR_URI}/openedx_backup:latest" >> $GITHUB_ENV
+          echo "AWS_ECR_REPOSITORY_CREDENTIALS=${AWS_ECR_URI}/openedx_credentials:latest" >> $GITHUB_ENV
+          echo "AWS_ECR_REPOSITORY_MFE=${AWS_ECR_URI}/openedx_mfe:latest" >> $GITHUB_ENV
+          echo "AWS_ECR_REPOSITORY_OPENEDX=${AWS_ECR_URI}/openedx:latest" >> $GITHUB_ENV
+
+      # ---------------------------------------------------------------------------------
+      # initialize this Github workspace environment: python, tutor, kubectl, aws cli
+      # ---------------------------------------------------------------------------------
+      - name: Initialize environment
+        uses: ./.github/workflows/tutor/k8s/init
         with:
           environment-id: prod
           namespace: openedx-prod
           openedx-common-version: open-release/maple.3
-          aws-key: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-ses-iam-key: ${{ secrets.AWS_SES_IAM_KEY }}
-          aws-ses-iam-secret: ${{ secrets.AWS_SES_IAM_SECRET }}
+          aws-ecr-uri: ${AWS_ECR_REPOSITORY_OPENEDX}
+
+      # ---------------------------------------------------------------------------------
+      # Configure optional tutor plugins
+      # ---------------------------------------------------------------------------------
+      - name: Enable tutor plugin - S3
+        uses: openedx-actions/tutor-enable-plugin-s3
+        if: ${{ env.ENABLE_S3 == 'true' }}
+        with:
+          namespace: openedx-prod
+
+      - name: Enable tutor plugin - Backup
+        uses: openedx-actions/tutor-enable-plugin-backup@v0.0.1
+        if: ${{ env.ENABLE_BACKUP == 'true' }}
+        with:
+          aws-ecr-uri: ${AWS_ECR_REPOSITORY_BACKUPS}
+          namespace: openedx-prod
+
+      - name: Enable tutor plugin - Discovery
+        uses: openedx-actions/tutor-enable-plugin-discovery@v0.0.1
+        if: ${{ env.ENABLE_DISCOVERY == 'true' }}
+        with:
+          namespace: openedx-prod
+
+      - name: Enable tutor plugin - MFE
+        uses: openedx-actions/tutor-enable-plugin-mfe@v0.0.1
+        if: ${{ env.ENABLE_MFE == 'true' }}
+        with:
+          aws-ecr-uri: ${AWS_ECR_REPOSITORY_MFE}
+
+      - name: Enable tutor plugin - Credentials
+        uses: openedx-actions/tutor-enable-plugin-credentials@v0.0.1
+        if: ${{ env.ENABLE_CREDENTIALS == 'true' }}
+        with:
+          namespace: openedx-prod
+          aws-ecr-uri: ${AWS_ECR_REPOSITORY_CREDENTIALS}
+          common-logo-url: https://www.edx.org/images/logos/edx-logo-elm.svg
+
+      - name: Enable tutor plugin - Xqueue
+        uses: openedx-actions/tutor-enable-plugin-xqueue@v0.0.1
+        if: ${{ env.ENABLE_XQUEUE == 'true' }}
+        with:
+          namespace: openedx-prod
+
+      - name: Enable tutor plugin - Notes
+        uses: openedx-actions/tutor-enable-plugin-notes@v0.0.1
+        if: ${{ env.ENABLE_NOTES == 'true' }}
+        with:
+          namespace: openedx-prod
+
+      - name: Enable tutor plugin - Ecommerce
+        uses: openedx-actions/tutor-enable-plugin-ecommerce@v0.0.1
+        if: ${{ env.ENABLE_ECOMMERCE == 'true' }}
+        with:
+          namespace: openedx-prod
+
+      - name: Enable tutor plugin - Forum
+        uses: openedx-actions/tutor-enable-plugin-forum@v0.0.1
+        if: ${{ env.ENABLE_FORUM == 'true' }}
+
+      # ---------------------------------------------------------------------------------
+      # Configure backend services
+      # ---------------------------------------------------------------------------------
+      - name: Configure SMTP
+        uses: openedx-actions/tutor-service-configure-smtp@v0.0.1
+        with:
+          aws-ses-iam-key: ${{ secrets.aws-ses-iam-key }}
+          aws-ses-iam-secret: ${{ secrets.aws-ses-iam-secret }}
+          aws-region: us-east-2
+
+      - name: Configure Redis
+        uses: openedx-actions/tutor-service-configure-redis@v0.0.1
+
+      - name: Configure MySQL
+        uses: openedx-actions/tutor-service-configure-mysql@v0.0.1
+
+      # ---------------------------------------------------------------------------------
+      # Deploy
+      # ---------------------------------------------------------------------------------
+      - name: Initialize environment
+        uses: ./.github/workflows/tutor/k8s/deploy
+        with:
+          environment-id: prod
+          namespace: openedx-prod
